[package]
name = "iffy"
version = "0.1.2"
readme = "README.md"
license = "MIT"
repository = "https://github.com/zfzackfrost/iffy-rs"
authors = ["Zachary Frost <10238600+zfzackfrost@users.noreply.github.com>"]
description = "proc macro for simulating the ternary operator from C-like languages"
keywords = ["if", "ternary", "condition", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"

[dependencies.syn]
version = "1.0"
